--- a/bdg-utils-parquet/pom.xml
+++ b/bdg-utils-parquet/pom.xml
@@ -27,7 +27,7 @@
         <configuration>
           <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
           <junitxml>.</junitxml>
-          <filereports>BDGUtilsMinhashTestSuite.txt</filereports>
+          <filereports>BDGUtilsParquetTestSuite.txt</filereports>
           <!--
               As explained here: http://stackoverflow.com/questions/1660441/java-flag-to-enable-extended-serialization-debugging-info
               The second option allows us better debugging for serialization-based errors.
@@ -175,6 +175,43 @@
                 </goals>
               </execution>
             </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>default</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.scalatest</groupId>
+            <artifactId>scalatest-maven-plugin</artifactId>
+            <configuration>
+              <tagsToExclude>org.bdgenomics.adam.util.NetworkConnected,org.bdgenomics.adam.util.S3Test</tagsToExclude>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>network-connected</id>
+      <activation>
+        <property>
+          <name>networkconnected</name>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.scalatest</groupId>
+            <artifactId>scalatest-maven-plugin</artifactId>
+            <configuration>
+              <tagsToExclude>org.bdgenomics.adam.util.S3Test</tagsToExclude>
+              <tagsToInclude>org.bdgenomics.adam.util.NetworkConnected</tagsToInclude>
+            </configuration>
           </plugin>
         </plugins>
       </build>
